@@ -481,7 +481,7 @@ void CVLTonemap::copy_view()
 void CVLTonemap::show_aboutbox()
 {
     QMessageBox::about(this, tr("About " PACKAGE_NAME), tr(
-		"<p>%1 version %2</p>"
+		"<p>This is %1 version %2, using CVL version %3.</p>"
 		"<p>Copyright (C) 2007  Martin Lambers and others.<br>"
 		"This is free software. You may redistribute copies of it under the terms of "
 		"the <a href=\"http://www.gnu.org/licenses/old-licenses/gpl-2.0.html\">"
@@ -489,5 +489,6 @@ void CVLTonemap::show_aboutbox()
 		"There is NO WARRANTY, to the extent permitted by law.</p>"
 		"See <a href=\"http://cvtool.sourceforge.net/cvltonemap.html\">"
 		"http://cvtool.sourceforge.net/cvltonemap.html</a> "
-		"for more information on this software.</p>").arg(PACKAGE_NAME).arg(VERSION));
+		"for more information on this software.</p>")
+	    .arg(PACKAGE_NAME).arg(VERSION).arg(cvl_check_version(NULL));
 }
