@@ -1,3 +1,7 @@
+2007-10-16  Martin Lambers <marlam@marlam.de>
+
+	* src/cvltonemap.cpp: Print CVL version in AboutBox.
+
 2007-10-09  Martin Lambers <marlam@marlam.de>
 
 	* mhlib/mh_os.h, mhlib/mh_os.c, src/main.cpp: Rename DIRSEP to
